--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,5 +1,7 @@
+<div class='container new-restaurant'>
 <h1>New Restaurant</h1>
 
 <%= render 'form', restaurant: @restaurant %>
 
 <%= link_to 'Back', restaurants_path %>
+</div>
