--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -5,7 +5,8 @@
   <div class="form-inputs">
     <%= f.input :name %>
     <%= f.input :address %>
-    <%= f.input :category %>
+    <%= f.input :phone_number, :required => false %>
+    <%= f.input :category, :collection => %w[chinese italian japanese french belgian] %>
   </div>
 
   <div class="form-actions">
