--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,9 +1,14 @@
+<p id="notice"><%= notice %></p>
+
+<h1>Restaurants</h1>
+
 <table class='table'>
   <thead>
     <tr>
       <th>Name</th>
       <th>Address</th>
       <th>Category</th>
+      <th>Rating</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,7 +19,7 @@
         <td><%= restaurant.name %></td>
         <td><%= restaurant.address %></td>
         <td><%= restaurant.category %></td>
-      <td><%= link_to 'Show', show_restaurant_path(restaurant.id) %></td>
+      <td><%= link_to 'Show', restaurant %></td>
       </tr>
     <% end %>
   </tbody>
