--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,2 +1,10 @@
-<h1>Reviews#new</h1>
-<p>Find me in app/views/reviews/new.html.erb</p>
+<div class='container new-restaurant'>
+<h1><%= @restaurant.name %></h1>
+<hr>
+  <%= simple_form_for [@restaurant, @review] do |f| %>
+    <%= f.input :content %>
+    <%= f.input :rating, as: :integer %>
+    <%= f.submit "Submit review", class: "btn btn-primary" %>
+  <% end %>
+  <%= link_to 'Back', restaurants_path %>
+</div>
